fix: create DateOnly converter, regenerate user management client from json
