# UserManagement/Controllers/UserManagementController.cs
@@ -29,13 +29,13 @@ namespace UserManagement.Controllers
         }
 
         [HttpPost("StudentRegister")]
-        public async Task<Results<Ok, ValidationProblem>> RegisterStudent(StudentRegisterDto registration, [FromServices] IServiceProvider sp)
+        public async Task<Results<Ok, ValidationProblem>> RegisterStudent([FromBody]StudentRegisterDto registration, [FromServices] IServiceProvider sp)
         {
             return await RegisterUser(registration, sp);
         }
 
         [HttpPost("LecturerRegister")]
-        public async Task<Results<Ok, ValidationProblem>> RegisterLecturer(LecturerRegisterDto registration, [FromServices] IServiceProvider sp)
+        public async Task<Results<Ok, ValidationProblem>> RegisterLecturer([FromBody] LecturerRegisterDto registration, [FromServices] IServiceProvider sp)
         {
             return await RegisterUser(registration, sp);
         }
